# HorizonOverlay

./: .gitignore  README.md
.github/workflows/: build.yml
data/: config.ini  obstructions.txt
docs/: obstructions-format.md
plugin/HorizonOverlay/: CMakeLists.txt
plugin/HorizonOverlay/src/: CMakeLists.txt  HorizonOverlay.cpp  HorizonOverlay.hpp
plugin/HorizonOverlay/translations/: CMakeLists.txt
plugin/HorizonOverlay/translations/horizonoverlay/: POTFILES.in  horizonoverlay.pot  zh_CN.po
scripts/: install-to-user-modules.sh
