SET(HORIZONOVERLAY_VERSION "0.1.1")

IF(NOT DEFINED BUILD_DYNAMIC_PLUGIN)
    SET(BUILD_DYNAMIC_PLUGIN 1)
ENDIF()

ADD_DEFINITIONS(-DHORIZONOVERLAY_PLUGIN_VERSION="${HORIZONOVERLAY_VERSION}")
ADD_DEFINITIONS(-DHORIZONOVERLAY_PLUGIN_LICENSE="GNU GPLv2 or later")

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(translations)
