FIND_PACKAGE(Qt${QT_VERSION_MAJOR}LinguistTools QUIET)
IF(TARGET Qt${QT_VERSION_MAJOR}::lconvert)
    GET_TARGET_PROPERTY(HORIZONOVERLAY_LCONVERT_EXECUTABLE Qt${QT_VERSION_MAJOR}::lconvert IMPORTED_LOCATION)
ENDIF()

SET(HORIZONOVERLAY_TRANSLATION_DOMAIN horizonoverlay)
SET(HORIZONOVERLAY_TRANSLATION_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/${HORIZONOVERLAY_TRANSLATION_DOMAIN})
SET(HORIZONOVERLAY_TRANSLATION_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/${HORIZONOVERLAY_TRANSLATION_DOMAIN})

FILE(GLOB HORIZONOVERLAY_PO_FILES RELATIVE "${HORIZONOVERLAY_TRANSLATION_SOURCE_DIR}" "${HORIZONOVERLAY_TRANSLATION_SOURCE_DIR}/*.po")
LIST(SORT HORIZONOVERLAY_PO_FILES)

SET(HORIZONOVERLAY_QM_FILES)
IF(EXISTS "${HORIZONOVERLAY_LCONVERT_EXECUTABLE}")
    FILE(MAKE_DIRECTORY "${HORIZONOVERLAY_TRANSLATION_BINARY_DIR}")

    FOREACH(HORIZONOVERLAY_PO_FILE ${HORIZONOVERLAY_PO_FILES})
        STRING(REGEX REPLACE "\\.po$" "" HORIZONOVERLAY_LANG "${HORIZONOVERLAY_PO_FILE}")
        SET(HORIZONOVERLAY_PO_PATH "${HORIZONOVERLAY_TRANSLATION_SOURCE_DIR}/${HORIZONOVERLAY_PO_FILE}")
        SET(HORIZONOVERLAY_QM_PATH "${HORIZONOVERLAY_TRANSLATION_BINARY_DIR}/${HORIZONOVERLAY_LANG}.qm")

        ADD_CUSTOM_COMMAND(
            OUTPUT "${HORIZONOVERLAY_QM_PATH}"
            COMMAND "${HORIZONOVERLAY_LCONVERT_EXECUTABLE}" -i "${HORIZONOVERLAY_PO_PATH}" -o "${HORIZONOVERLAY_QM_PATH}"
            DEPENDS "${HORIZONOVERLAY_PO_PATH}"
            COMMENT "Compiling HorizonOverlay ${HORIZONOVERLAY_LANG} translation"
            VERBATIM
        )
        LIST(APPEND HORIZONOVERLAY_QM_FILES "${HORIZONOVERLAY_QM_PATH}")
    ENDFOREACH()

    IF(HORIZONOVERLAY_QM_FILES)
        ADD_CUSTOM_TARGET(HorizonOverlayTranslations ALL DEPENDS ${HORIZONOVERLAY_QM_FILES})
        IF(TARGET HorizonOverlay)
            ADD_DEPENDENCIES(HorizonOverlay HorizonOverlayTranslations)
        ENDIF()
        INSTALL(FILES ${HORIZONOVERLAY_QM_FILES} DESTINATION "modules/HorizonOverlay/translations/${HORIZONOVERLAY_TRANSLATION_DOMAIN}")
    ENDIF()
ENDIF()

FIND_PROGRAM(HORIZONOVERLAY_XGETTEXT_EXECUTABLE xgettext)
IF(HORIZONOVERLAY_XGETTEXT_EXECUTABLE)
    ADD_CUSTOM_TARGET(
        generate-pot-horizonoverlay
        "${HORIZONOVERLAY_XGETTEXT_EXECUTABLE}"
            -o "${HORIZONOVERLAY_TRANSLATION_SOURCE_DIR}/horizonoverlay.pot"
            -C
            --qt
            --keyword=_
            --keyword=N_
            --keyword=q_
            --keyword=translateUi
            --add-comments=TRANSLATORS:
            --directory="${CMAKE_CURRENT_SOURCE_DIR}/.."
            --files-from="${HORIZONOVERLAY_TRANSLATION_SOURCE_DIR}/POTFILES.in"
            --copyright-holder="HorizonOverlay contributors"
            --msgid-bugs-address="https://github.com/songshugong/HorizonOverlay/issues"
            --from-code=utf-8
        WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/.."
        COMMENT "Generating horizonoverlay.pot"
        VERBATIM
    )
ENDIF()
